fixed funny spacing when sending long message

--- a/src/components/MessageContainer/MessageContainer.scss
+++ b/src/components/MessageContainer/MessageContainer.scss
@@ -13,7 +13,7 @@
   }
 
   .avatar {
-    margin: auto auto 0;
+    margin: 0 auto;
   }
   
   span {
